# proc-macro-warning

./: .gitignore  CODE_OF_CONDUCT  Cargo.toml  MAINTAIN.md  README.md  rust-toolchain.toml
.github/workflows/: rust.yml
proc-macro-warning/: Cargo.toml
proc-macro-warning/src/: lib.rs  test.rs
src/: lib.rs  test.rs
tests/derive/: Cargo.toml
tests/derive/src/: lib.rs
tests/ui/src/: lib.rs
tests/ui/src/warn/: derive_basic.rs  derive_basic.stderr
ui-tests/: Cargo.toml
ui-tests/derive/: Cargo.toml
ui-tests/derive/src/: lib.rs
ui-tests/ui/: Cargo.toml
ui-tests/ui/src/: lib.rs
ui-tests/ui/src/no-warn/: derive_no_span.rs
ui-tests/ui/src/warn/: derive_basic.rs  derive_basic.stderr  derive_raw.rs  derive_raw.stderr  derive_twice_errors.rs  derive_twice_errors.stderr
