[package]
name = "proc-macro-warning"
version = "0.1.2"
edition = "2021"
license = "GPL-3.0-only"
authors = ["Oliver Tale-Yazdi <oliver@tasty.limo>"]
description = "Emit warnings from inside proc macros."
repository = "https://github.com/ggwpez/proc-macro-warning"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = { version = "1.0.51", default-features = false }
quote = { version = "1.0.23", default-features = false }
syn = { version = "1.0.109", default-features = false }

[features]
default = []
