[package]
name = "proc-macro-warning"
version = "1.0.2"
edition = "2021"
license = "GPL-3.0 OR Apache-2.0"
authors = ["Oliver Tale-Yazdi <oliver@tasty.limo>"]
description = "Emit warnings from inside proc macros."
repository = "https://github.com/ggwpez/proc-macro-warning"
readme.workspace = true

[dependencies]
proc-macro2 = { version = "1.0", default-features = false }
quote = { version = "1.0", default-features = false }
syn = { version = "2.0", default-features = false }

[dev-dependencies]
derive = { path = "../ui-tests/derive" }

[features]
default = ["derive_debug"]

derive_debug = []
